--- a/6-adding-text.html
+++ b/6-adding-text.html
@@ -14,13 +14,23 @@
 </head>
 
 <body>
-  <canvas id="canvas" height="300" width="300">
+  <canvas id="canvas" height="300" width="600">
     Your browser does not support HTML5 Canvas.
   </canvas>
   
   <script>
     const canvas = document.getElementById('canvas')
     const ctx = canvas.getContext('2d')
+
+    ctx.moveTo(0, canvas.height/2)
+    ctx.lineTo(canvas.width, canvas.height/2, 200)
+    ctx.stroke()
+
+    ctx.font = '50px Helvetica'
+    ctx.fillStyle = 'tomato'
+    ctx.textAlign = 'center'
+    ctx.textBaseline = 'hanging'
+    ctx.strokeText('Adding Canvas Text', canvas.width/2, canvas.height/2)
 
     console.log(ctx)
   </script>
