--- a/16-looping.html
+++ b/16-looping.html
@@ -14,15 +14,34 @@
 </head>
 
 <body>
-  <canvas id="canvas" height="300" width="600">
+  <canvas id="canvas" height="600" width="600">
     Your browser does not support HTML5 Canvas.
   </canvas>
 
   <script>
     const canvas = document.getElementById('canvas')
     const ctx = canvas.getContext('2d')
-    
-    
+
+    ctx.fillStyle = 'red'
+    ctx.arc(canvas.width / 2, canvas.height / 2, 230, 0, 2*Math.PI)
+    ctx.fill()
+
+    for (let i = 0; i < 6; i++) {
+      function drawSegments () {
+        ctx.beginPath()
+        ctx.moveTo(canvas.width/2, canvas.height/2)
+        ctx.fillStyle = 'black'
+
+        ctx.arc(canvas.width / 2, canvas.height / 2, 230, 1.5*Math.PI, 1.6666*Math.PI)
+
+        ctx.fill()
+      }
+
+      drawSegments()
+      ctx.translate(canvas.width/2, canvas.height/2)
+      ctx.rotate(60*Math.PI/180)
+      ctx.translate(-300, -300)
+    }
 
   </script>
 
